add pizza constructor and price function

--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
   </head>
 
   <body>
+    <div class="container">
+      <form>
+        <h2>Size</h2>
+        <select class="form-control" id="size">
+          <option value="small">small</option>
+          <option value="medium">medium</option>
+          <option value="large">large</option>
+        </select>
+        <h2>Toppings</h2>
+        <input type="checkbox" name="topping" value="pep"> pepperoni<br>
+        <input type="checkbox" name="topping" value="green"> green peppers <br>
+        <input type="checkbox" name="topping" value="ham"> ham <br>
+        <button type="submit" class="btn">Order my pizza!</button>
+      </form>
+    </div>
     <ul id="output">
     </ul>
   </body>
