--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
           <option value="large">large</option>
         </select>
         <h2>Toppings</h2>
-        <input type="checkbox" name="topping" value="pep"> pepperoni<br>
-        <input type="checkbox" name="topping" value="green"> green peppers <br>
-        <input type="checkbox" name="topping" value="ham"> ham <br>
+        <input type="checkbox" name="top1" value= true> pepperoni<br>
+        <input type="checkbox" name="top2" value= true> ham <br>
+        <input type="checkbox" name="top3" value= true> green peppers <br>
         <button type="submit" class="btn">Order my pizza!</button>
       </form>
     </div>
