--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <input type="checkbox" name="top1" value= true> pepperoni<br>
         <input type="checkbox" name="top2" value= true> ham <br>
         <input type="checkbox" name="top3" value= true> green peppers <br>
-        <button type="submit" class="btn">Order my pizza!</button>
+        <button type="submit" class="btn btn-success">Order my pizza!</button>
       </form>
     </div>
     <ul id="output">
