--- a/index.html
+++ b/index.html
@@ -21,8 +21,13 @@
         <input type="checkbox" name="top1" value= true> pepperoni<br>
         <input type="checkbox" name="top2" value= true> ham <br>
         <input type="checkbox" name="top3" value= true> green peppers <br>
+        <input type="checkbox" name="top4" value= true> pineapple <br>
         <button type="submit" class="btn btn-success">Order my pizza!</button>
       </form>
+
+      <ul id="output">
+      </ul>
+
     </div>
     <ul id="output">
     </ul>
