add array to Pizza class to create more DRY code

--- a/index.html
+++ b/index.html
@@ -18,23 +18,23 @@
           <option value="medium">medium</option>
           <option value="large">large</option>
         </select>
-        <p id="space">
+        <p id="createspace">
         </p>
-        <h2>Toppings (Cost 50 cents each. Anchovies cost 1$!)</h2>
+        <h2>Toppings (Cost 50 cents each)</h2>
         <div class="check">
-          <input type="checkbox" name="top1" value= true> pepperoni
+          <input type="checkbox" name="top1" value= "pepperoni"> pepperoni
         </div>
         <div class="check">
-          <input type="checkbox" name="top2" value= true> ham
+          <input type="checkbox" name="top2" value= "ham"> ham
         </div>
         <div class="check">
-          <input type="checkbox" name="top3" value= true> green peppers
+          <input type="checkbox" name="top3" value= "peppers"> green peppers
         </div>
         <div class="check">
-          <input type="checkbox" name="top4" value= true> pineapple
+          <input type="checkbox" name="top4" value= "pineapple"> pineapple
         </div>
         <div class="check">
-          <input type="checkbox" name="top5" value= true> anchovies
+          <input type="checkbox" name="top5" value= "anchovies"> anchovies
         </div>
         <button type="submit" class="btn btn-success">Order my pizza!</button>
         <button type="button" class="btn btn-danger" id="reset">Reset my Order</button>
